--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1764,6 +1764,9 @@ input, select, textarea {
 		}
 
 /* Section/Article */
+	header.major h2.after:after {
+				height: 0 !important;
+	}
 
 	section.special, article.special {
 		text-align: center;
