--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3994,7 +3994,7 @@ input, select, textarea {
 	font-size: 18px;
 }
 .celular h3, .celular .number,
-.whats h3, .whtas .number{
+.whats h3, .whats .number{
 	display: inline-block;
 	font-size: 26px;
 	padding-left: 10px;
